performance-os/k8s/01-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: performance-os
  labels:
    app.kubernetes.io/name: performance-os
